<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="40dp"
        android:textColor="@color/orange"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:fontFamily="cursive"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_below="@+id/login_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_owner_phone_ph" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/username"
    app:endIconMode="password_toggle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_edit"
            android:hint="@string/lg_ph_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:inputType="textPassword"
        />
    </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/forgot_password_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/forgot_password"
            android:textColor="@color/blue"
            android:textSize="15dp" />


        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgot_password_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:text="@string/lg_btn" />

        <Button
            android:id="@+id/login_register_btn"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:text="@string/register_here"
            android:textColor="@color/blue"
            android:textSize="15dp" />

    </RelativeLayout>
</ScrollView>