<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".activities.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/reset_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_title"
            android:textSize="30dp"
            android:textColor="@color/orange"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:fontFamily="cursive"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rp_nic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/reset_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rp_nic_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rp_ph_ph" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rp_si"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/rp_nic">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rp_si_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rp_si_ph" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/rp_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@+id/rp_si"
            app:endIconMode="password_toggle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rp_password_edit"
                android:hint="@string/rp_pas_ph"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>


    </RelativeLayout>
</LinearLayout>