<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FuelStatusFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fuel_status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="cursive"
            android:text="@string/fuel_status_title"
            android:textColor="@color/orange"
            android:textSize="30dp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/a_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fuel_status_title"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="8dp"
            app:cardBackgroundColor="@color/light_indigo"
            app:cardElevation="5dp"
            app:strokeWidth="0dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"

                        >

                        <TableRow
                            android:background="@color/orange"
                            android:padding="5dp">

                            <TextView
                                android:layout_weight="1"
                                android:padding="3dip"
                                android:text="@string/Fuel_Type" />

                            <TextView
                                android:layout_weight="1"
                                android:padding="3dip"
                                android:text="@string/arrived" />

                            <TextView
                                android:layout_weight="1"
                                android:padding="3dip"
                                android:text="@string/finished" />
                        </TableRow>

                        <TableRow android:padding="5dp">

                            <TextView
                                android:layout_weight="1"
                                android:padding="3dip"
                                android:text="@string/Oct_92" />

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:orientation="horizontal">

                                <RadioButton
                                    android:id="@+id/radio_btn_1.1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1" />

                                <RadioButton
                                    android:id="@+id/radio_btn_1.2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1" />
                            </RadioGroup>
                        </TableRow>


                        <TableRow android:padding="5dp">

                            <TextView
                                android:layout_weight="1"
                                android:padding="3dip"
                                android:text="@string/Oct_95" />

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:orientation="horizontal">

                                <RadioButton
                                    android:id="@+id/radio_btn_2.1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1" />

                                <RadioButton
                                    android:id="@+id/radio_btn_2.2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1" />
                            </RadioGroup>
                        </TableRow>


                        <TableRow android:padding="5dp">

                            <TextView
                                android:layout_weight="1"
                                android:padding="3dip"
                                android:text="@string/Diesel" />

                            <RadioGroup
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:orientation="horizontal">

                                <RadioButton
                                    android:id="@+id/radio_btn_3.1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1" />

                                <RadioButton
                                    android:id="@+id/radio_btn_3.2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1" />
                            </RadioGroup>
                        </TableRow>

                    </TableLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_margin="2dp"
                    android:orientation="horizontal"

                    >

                    <com.google.android.material.button.MaterialButton
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:text="@string/update_btn"
                        android:textColor="@color/teal_700"
                        android:textSize="17dp" />

                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</ScrollView>